added contact and experience title

--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <title>CV</title>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+        <div class="container"></div>
+        <div id="contact" class="container filled">
+            <div class="head">
+                <h1>Kubacki Wojciech</h1>
+                <h4>Frontend Developer</h4>
+            </div>
+            <div id="number-and-email">
+                <h3>Contact:</h3>
+                <h5>733 001 255</h5>
+                <h5>kubackiwo@gmail.com</h5>
+            </div>
+        </div>
+        <div id="experience-title" class="container filled">
+            <p>EXPE</p>
+            <p>RIEN</p>
+            <p>CE</p>
+        </div>
+        <div id="experience" class="container">
+            
+        </div>
+        <div class="container"></div>
+        <div class="container filled"></div>
+        <div class="container filled"></div>
+        <div class="container"></div>
+    </div>
 </body>
 </html>
