added projects section

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    
+
     <title>CV</title>
 </head>
+
 <body>
     <div id="root">
+
         <div class="container"></div>
         <div id="contact" class="container filled">
             <div class="head">
@@ -21,18 +24,61 @@
                 <h5>kubackiwo@gmail.com</h5>
             </div>
         </div>
-        <div id="experience-title" class="container filled">
+
+        <div id="experience-title" class="container filled title">
             <p>EXPE</p>
             <p>RIEN</p>
             <p>CE</p>
         </div>
-        <div id="experience" class="container">
-            
+        <div id="experience-description" class="container">
+            <div class="job">
+                <h2>Enamor International</h2>
+                <h4>Frontend Developer</h4>
+                <h5>Apr. 2022 - now (1 year 4 months)</h5>
+            </div>
+            <div class="job">
+                <h2>Atinea</h2>
+                <h4>Programmer</h4>
+                <h5>July - Sept. 2021 (3 months)</h5>
+            </div>
         </div>
-        <div class="container"></div>
-        <div class="container filled"></div>
-        <div class="container filled"></div>
-        <div class="container"></div>
+
+        <div id="projects-title" class="container title">
+            <p>PROJ</p>
+            <p>ECTS</p>
+        </div>
+        <div id="projects-description" class="container filled">
+            <div class="project-info">
+                <h3>Hangman</h3>
+                <a>https://github.com/KubackiWojciech/hangman-english-game</a>
+                <p>Almost standard hangman but user has phrase in Polish as a tip</p>
+            </div>
+            <div class="project-info">
+                <h3>Colors picker</h3>
+                <a>https://github.com/KubackiWojciech/colors-picker</a>
+                <p>Application which generates random combinations of two colors. User can peek same combination in diffrent variants</p>
+            </div>
+        </div>
+
+        <div id="skills-title" class="container title filled">
+            <p>SKIL</p>
+            <p>LS</p>
+        </div>
+        <div id="skills-description" class="container">
+            <div class="skill-section">
+                <h3>Javascript:</h3>
+                <h5>JS, TS, React</h5>
+            </div>
+            <div class="skill-section">
+                <h3>Style:</h3>
+                <h5>CSS, SASS, MUI</h5>
+            </div>
+            <div class="skill-section">
+                <h3>Other:</h3>
+                <h5>GIT, Webpack</h5>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
