set font and gold color

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 <body>
     <div id="root">
 
-        <div class="container"></div>
-        <div id="contact" class="container filled">
+        <div id="photo" class="container filled">
+            <div id="profile-circle">
+                <img src="./zdj.jpg" alt="my profile">
+            </div>
+        </div>
+        <div id="contact" class="container">
             <div class="head">
                 <h1>Kubacki Wojciech</h1>
                 <h4>Frontend Developer</h4>
@@ -25,12 +29,12 @@
             </div>
         </div>
 
-        <div id="experience-title" class="container filled title">
+        <div id="experience-title" class="container title">
             <p>EXPE</p>
             <p>RIEN</p>
-            <p>CE</p>
+            <p>CE--</p>
         </div>
-        <div id="experience-description" class="container">
+        <div id="experience-description" class="container filled">
             <div class="job">
                 <h2>Enamor International</h2>
                 <h4>Frontend Developer</h4>
@@ -43,11 +47,11 @@
             </div>
         </div>
 
-        <div id="projects-title" class="container title">
+        <div id="projects-title" class="container filled title">
             <p>PROJ</p>
             <p>ECTS</p>
         </div>
-        <div id="projects-description" class="container filled">
+        <div id="projects-description" class="container">
             <div class="project-info">
                 <h3>Hangman</h3>
                 <a>https://github.com/KubackiWojciech/hangman-english-game</a>
@@ -56,15 +60,16 @@
             <div class="project-info">
                 <h3>Colors picker</h3>
                 <a>https://github.com/KubackiWojciech/colors-picker</a>
-                <p>Application which generates random combinations of two colors. User can peek same combination in diffrent variants</p>
+                <p>Application which generates random combinations of two colors. User can peek same combination in
+                    diffrent variants</p>
             </div>
         </div>
 
-        <div id="skills-title" class="container title filled">
+        <div id="skills-title" class="container title">
             <p>SKIL</p>
-            <p>LS</p>
+            <p>LS--</p>
         </div>
-        <div id="skills-description" class="container">
+        <div id="skills-description" class="container filled">
             <div class="skill-section">
                 <h3>Javascript:</h3>
                 <h5>JS, TS, React</h5>
